# easystroke

./: .cproject  .gitignore  .project  LICENSE  LICENSE.md  Makefile  NOTICE.md  README.md  actiondb.cc  actiondb.h  actions.cc  actions.h  allow_disabled_extra_buttons.patch  annotate.cc  annotate.h  cellrenderertextish.c  cellrenderertextish.h  cellrenderertextish.vala  changelog  clientwin.c  composite.cc  composite.h  copy.cc  copy.h  dbus-server.cc  dbus.xml  dsimple.c  dsimple.h  easystroke.desktop  easystroke.desktop.in  fire.cc  fire.h  gesture.cc  gesture.h  grabber.cc  grabber.h  gui.glade  handler.cc  handler.h  locking.h  (+27 more)
access/: Makefile  get-comp.c  track-focus.c
cellrenderertk/: Makefile  README  cellrenderertk.c  cellrenderertk.h  cellrenderertkmm.cc  cellrenderertkmm.h  cellrenderertkmm_p.h  marshalers.list
debian/: changelog  control  copyright  rules  watch
doc/: Makefile  algo.tex
docs/: advanced-gestures.md  build-instructions.md  changelog.md  index.md  tips-and-tricks.md  translations.md
gui/: Makefile  main.py
po/: ca.po  cs.po  de.po  el.po  es.po  fi.po  fr.po  he.po  hu.po  it.po  ja.po  ko.po  pl.po  ru.po  vi.po  zh.po  zh_CN.po  zh_TW.po
service/: .gitignore  CMakeLists.txt  Makefile  actiondb.cc  actiondb.h  actions.cc  actions.h  annotate.h  appxcontext.cpp  appxcontext.h  cellrenderertextish.c  composite.cc  composite.h  debug.mk.ex  desktop.cc  easystroke.appdata.xml  easystroke.desktop.in  eventloop.cpp  eventloop.h  fire.cc  gesture.cc  gesture.h  globals.h  grabber.cc  grabber.h  gui.glade  handler.cc  handler.h  log.cpp  log.h  main.cc  main.h  prefdb.cc  prefdb.h  prefs.cc  prefs.h  stats.cc  stroke.c  stroke.cpp  stroke.h  (+10 more)
service/actions/: action.cpp  action.h  modAction.cpp  modAction.h  modifiers.cpp  modifiers.h
service/events/: buttongrabber.cpp  buttongrabber.h  device.cpp  device.h  devicegrabber.cpp  devicegrabber.h  deviceobserver.cpp  deviceobserver.h  eventloop.cpp  eventloop.h  grabber.cc  grabber.h  handler.cc  handler.h  pointergrabber.cpp  pointergrabber.h  windowobserver.cpp  windowobserver.h
service/po/: ca.po  cs.po  de.po  el.po  es.po  fi.po  fr.po  he.po  hu.po  it.po  ja.po  ko.po  pl.po  ru.po  vi.po  zh_CN.po  zh_TW.po
unminimize/: Makefile  unminimize.cc
